--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,23 @@
     <title>SaiPrafful-Admin-Panel</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-firestore.js"></script>
+    <script>
+      const firebaseConfig = {
+    apiKey: "AIzaSyAhDZKhpAPGD914vw0X2pALPjfLwD1ADag",
+    authDomain: "bradbourne-admin-panel.firebaseapp.com",
+    databaseURL: "https://bradbourne-admin-panel.firebaseio.com",
+    projectId: "bradbourne-admin-panel",
+    storageBucket: "bradbourne-admin-panel.appspot.com",
+    messagingSenderId: "440707110565",
+    appId: "1:440707110565:web:eeaa979f4227395a1b9f4c"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+
+      </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
